First additions to site. Still under construction

--- a/assets/bibliography/2018-12-22-distill.bib
+++ b/assets/bibliography/2018-12-22-distill.bib
@@ -1,7 +1,7 @@
-@article{gregor2015draw,
-  title={DRAW: A recurrent neural network for image generation},
-  author={Gregor, Karol and Danihelka, Ivo and Graves, Alex and Rezende, Danilo Jimenez and Wierstra, Daan},
-  journal={arXiv preprint, arXiv:1502.04623},
-  year={2015},
-  url={https://arxiv.org/pdf/1502.04623.pdf}
+@article{angers2024roboculture,
+  title={RoboCulture: A Robotics Platform for Automated Biological Experimentation},
+  author={Kevin Angers, Kourosh Darvish, Naruki Yoshikawa, Sargol Okhovatian, Dawn Bannerman, Ilya Yakavets, Florian Shkurti, Alán Aspuru-Guzik, Milica Radisic},
+  journal={arXiv preprint, arXiv:????},
+  year={2024},
+  url={https://arxiv.org/pdf/????.pdf}
 }
