lots of changes

--- a/assets/bibliography/2018-12-22-distill.bib
+++ b/assets/bibliography/2018-12-22-distill.bib
@@ -1,7 +1,7 @@
-@article{angers2024roboculture,
+@article{angers2025roboculture,
   title={RoboCulture: A Robotics Platform for Automated Biological Experimentation},
   author={Kevin Angers, Kourosh Darvish, Naruki Yoshikawa, Sargol Okhovatian, Dawn Bannerman, Ilya Yakavets, Florian Shkurti, Alán Aspuru-Guzik, Milica Radisic},
   journal={arXiv preprint, arXiv:????},
-  year={2024},
-  url={https://arxiv.org/pdf/????.pdf}
+  year={2025},
+  url={https://arxiv.org/pdf/2505.14941}
 }
